k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: app-prod
  #annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
spec:
  ingressClassName: nginx # for trying with nginx ingress controller
  rules:
    - host: api.team5.sda.aks   
      http:
        paths:
          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: backend-svc        
                port:
                  number: 8080
